<?xml version="1.0" encoding="utf-8"?>

<!DOCTYPE resources [
    <!ENTITY TERMINAL_PACKAGE_NAME "com.flomobility.anx">
    <!ENTITY TERMINAL_APP_NAME "anx">
    <!ENTITY TERMINAL_API_APP_NAME "Terminal:API">
    <!ENTITY TERMINAL_BOOT_APP_NAME "Terminal:Boot">
    <!ENTITY TERMINAL_FLOAT_APP_NAME "Terminal:Float">
    <!ENTITY TERMINAL_STYLING_APP_NAME "Terminal:Styling">
    <!ENTITY TERMINAL_TASKER_APP_NAME "Terminal:Tasker">
    <!ENTITY TERMINAL_WIDGET_APP_NAME "Terminal:Widget">
    ]>

<resources>

    <string name="application_name">&TERMINAL_APP_NAME;</string>
    <string name="shared_user_label">&TERMINAL_APP_NAME; user</string>



    <!-- Terminal RUN_COMMAND permission -->
    <string name="permission_run_command_label">Run commands in &TERMINAL_APP_NAME; environment</string>
    <string name="permission_run_command_description">execute arbitrary commands within &TERMINAL_APP_NAME;
        environment and access files</string>



    <!-- Terminal Bootstrap Packages Installation -->
    <string name="bootstrap_installer_body">Installing bootstrap packages…</string>
    <string name="bootstrap_error_title">Unable to install bootstrap</string>
    <string name="bootstrap_error_body">&TERMINAL_APP_NAME; was unable to install the bootstrap packages.</string>
    <string name="bootstrap_error_abort">Abort</string>
    <string name="bootstrap_error_try_again">Try again</string>
    <string name="bootstrap_error_not_primary_user_message">&TERMINAL_APP_NAME; can only be run as the primary user.
        \nBootstrap binaries compiled for &TERMINAL_APP_NAME; have hardcoded $PREFIX path and cannot be installed
        under any path other than %1$s.</string>



    <!-- Terminal Sidebar and Shortcuts -->
    <string name="action_new_session">New session</string>
    <string name="action_new_session_failsafe">Failsafe</string>
    <string name="title_max_terminals_reached">Max terminals reached</string>
    <string name="msg_max_terminals_reached">Close down existing ones before creating new.</string>

    <string name="title_rename_session">Set session name</string>
    <string name="action_rename_session_confirm">Set</string>
    <string name="title_create_named_session">New named session</string>
    <string name="action_create_named_session_confirm">Create</string>

    <string name="action_toggle_soft_keyboard">Keyboard</string>

    <string name="msg_enabling_terminal_toolbar">Enabling Terminal Toolbar</string>
    <string name="msg_disabling_terminal_toolbar">Disabling Terminal Toolbar</string>



    <!-- Terminal Popup -->
    <string name="action_select_url">Select URL</string>
    <string name="title_select_url_dialog">Click URL to copy or long press to open</string>
    <string name="title_select_url_none_found">No URL found in the terminal.</string>
    <string name="msg_select_url_copied_to_clipboard">URL copied to clipboard</string>

    <string name="action_share_transcript">Share transcript</string>
    <string name="title_share_transcript">Terminal transcript</string>
    <string name="title_share_transcript_with">Send transcript to:</string>

    <string name="action_autofill_password">Autofill password</string>

    <string name="action_reset_terminal">Reset</string>
    <string name="msg_terminal_reset">Terminal reset</string>

    <string name="action_kill_process">Kill process (%d)</string>
    <string name="title_confirm_kill_process">Really kill this session?</string>

    <string name="action_style_terminal">Style</string>
    <string name="action_toggle_keep_screen_on">Keep screen on</string>
    <string name="action_open_help">Help</string>
    <string name="action_open_settings">Settings</string>

    <string name="action_report_issue">Report Issue</string>
    <string name="msg_generating_report">Generating Report</string>
    <string name="msg_add_terminal_debug_info">Add terminal debug info to report?</string>

    <string name="error_styling_not_installed">The &TERMINAL_STYLING_APP_NAME; Plugin App is not installed.</string>
    <string name="action_styling_install">Install</string>



    <!-- Terminal Notifications -->
    <string name="notification_action_exit">Exit</string>
    <string name="notification_action_wake_lock">Acquire wakelock</string>
    <string name="notification_action_wake_unlock">Release wakelock</string>



    <!-- TerminalService -->
    <string name="error_display_over_other_apps_permission_not_granted">&TERMINAL_APP_NAME; requires
        \"Display over other apps\" permission to start terminal sessions from background on Android >= 10.
        Grants it from Settings -> Apps -> &TERMINAL_APP_NAME; -> Advanced</string>



    <!-- Terminal RunCommandService -->
    <string name="error_run_command_service_invalid_intent_action">Invalid intent action to RunCommandService: `%1$s`</string>
    <string name="error_run_command_service_mandatory_extra_missing">Mandatory extra missing to RunCommandService: \"%1$s\"</string>
    <string name="error_run_command_service_api_help">Visit %1$s for more info on RUN_COMMAND Intent usage.</string>



    <!-- Terminal File Receiver -->
    <string name="title_file_received">Save file in ~/downloads/</string>
    <string name="action_file_received_edit">Edit</string>
    <string name="action_file_received_open_directory">Open directory</string>



    <!-- Miscellaneous -->
    <string name="error_allow_external_apps_ungranted">%1$s requires `allow-external-apps`
        property to be set to `true` in `%2$s` file.</string>



    <!-- Terminal Settings -->
    <string name="title_activity_terminal_settings">&TERMINAL_APP_NAME; Settings</string>

    <!-- Terminal App Preferences -->
    <string name="terminal_preferences_title">&TERMINAL_APP_NAME;</string>
    <string name="terminal_preferences_summary">Preferences for &TERMINAL_APP_NAME; app</string>

        <!-- Debugging Preferences -->
        <string name="terminal_debugging_preferences_title">Debugging</string>
        <string name="terminal_debugging_preferences_summary">Preferences for debugging</string>

            <!-- Logging Category -->
            <string name="terminal_logging_header">Logging</string>

                <!-- Log Level -->
                <string name="terminal_log_level_title">Log Level</string>

                <!-- Terminal View Key Logging -->
                <string name="terminal_view_key_logging_enabled_title">Terminal View Key Logging</string>
                <string name="terminal_view_key_logging_enabled_off">Logs will not have entries for terminal view keys. (Default)</string>
                <string name="terminal_view_key_logging_enabled_on">Logcat logs will have entries for terminal view keys.
                    These are very verbose and should be disabled under normal circumstances or will cause performance issues.</string>

                <!-- Plugin Error Notifications -->
                <string name="terminal_plugin_error_notifications_enabled_title">Plugin Error Notifications</string>
                <string name="terminal_plugin_error_notifications_enabled_off">Disable flashes and notifications for plugin errors.</string>
                <string name="terminal_plugin_error_notifications_enabled_on">Show flashes and notifications for plugin errors. (Default)</string>

                <!-- Crash Report Notifications -->
                <string name="terminal_crash_report_notifications_enabled_title">Crash Report Notifications</string>
                <string name="terminal_crash_report_notifications_enabled_off">Disable notifications for crash reports.</string>
                <string name="terminal_crash_report_notifications_enabled_on">Show notifications for crash reports. (Default)</string>


        <!-- Terminal IO Preferences -->
        <string name="terminal_io_preferences_title">Terminal I/O</string>
        <string name="terminal_io_preferences_summary">Preferences for terminal I/O</string>

            <!-- Keyboard Category -->
            <string name="terminal_keyboard_header">Keyboard</string>

                <!-- Soft Keyboard -->
                <string name="terminal_soft_keyboard_enabled_title">Soft Keyboard Enabled</string>
                <string name="terminal_soft_keyboard_enabled_off">Soft keyboard will be disabled.</string>
                <string name="terminal_soft_keyboard_enabled_on">Soft keyboard will be enabled. (Default)</string>

                <!-- Soft Keyboard Only If No Hardware-->
                <string name="terminal_soft_keyboard_enabled_only_if_no_hardware_title">Soft Keyboard Only If No Hardware</string>
                <string name="terminal_soft_keyboard_enabled_only_if_no_hardware_off">Soft keyboard will be enabled even if
                    hardware keyboard is connected. (Default)</string>
                <string name="terminal_soft_keyboard_enabled_only_if_no_hardware_on">Soft keyboard will be enabled only if
                    no hardware keyboard is connected.</string>


        <!-- Terminal View Preferences -->
        <string name="terminal_view_preferences_title">Terminal View</string>
        <string name="terminal_view_preferences_summary">Preferences for terminal view</string>

            <!-- View Category -->
            <string name="terminal_view_view_header">View</string>

                <!-- Terminal View Margin Adjustment -->
                <string name="terminal_view_terminal_margin_adjustment_title">Terminal Margin Adjustment</string>
                <string name="terminal_view_terminal_margin_adjustment_off">Terminal margin adjustment will be disabled.</string>
                <string name="terminal_view_terminal_margin_adjustment_on">Terminal margin adjustment will be enabled.
                    It should be enabled to try to fix the issue where soft keyboard covers part of extra keys/terminal view.
                    If it causes screen flickering on your devices, then disable it. (Default)</string>



    <!-- Terminal:API App Preferences -->
    <string name="terminal_api_preferences_title">&TERMINAL_API_APP_NAME;</string>
    <string name="terminal_api_preferences_summary">Preferences for &TERMINAL_API_APP_NAME; app</string>



    <!-- Terminal:Float App Preferences -->
    <string name="terminal_float_preferences_title">&TERMINAL_FLOAT_APP_NAME;</string>
    <string name="terminal_float_preferences_summary">Preferences for &TERMINAL_FLOAT_APP_NAME; app</string>



    <!-- Terminal:Tasker App Preferences -->
    <string name="terminal_tasker_preferences_title">&TERMINAL_TASKER_APP_NAME;</string>
    <string name="terminal_tasker_preferences_summary">Preferences for &TERMINAL_TASKER_APP_NAME; app</string>



    <!-- Terminal:Widget App Preferences -->
    <string name="terminal_widget_preferences_title">&TERMINAL_WIDGET_APP_NAME;</string>
    <string name="terminal_widget_preferences_summary">Preferences for &TERMINAL_WIDGET_APP_NAME; app</string>



    <!-- About Preference -->
    <string name="about_preference_title">About</string>

    <!-- Donate Preference -->
    <string name="donate_preference_title">Donate</string>

    <!-- ANX Strings -->
    <string name="sample_ip">&#8226; 192.168.43.1 (wlan0)</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="docs">Documentation</string>
    <string name="licence_validity">Licence Validity:</string>
    <string name="actions">Actions</string>
    <string name="start_on_boot">Start on boot</string>
    <string name="logout">Logout</string>

</resources>
