<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:key="terminal"
        app:title="@string/terminal_preferences_title"
        app:summary="@string/terminal_preferences_summary"
        app:fragment="com.flomobility.anx.app.fragments.settings.TerminalPreferencesFragment"/>

    <Preference
        app:key="terminal_api"
        app:title="@string/terminal_api_preferences_title"
        app:summary="@string/terminal_api_preferences_summary"
        app:isPreferenceVisible="false"
        app:fragment="com.flomobility.anx.app.fragments.settings.TerminalAPIPreferencesFragment"/>

    <Preference
        app:key="terminal_float"
        app:title="@string/terminal_float_preferences_title"
        app:summary="@string/terminal_float_preferences_summary"
        app:isPreferenceVisible="false"
        app:fragment="com.flomobility.anx.app.fragments.settings.TerminalFloatPreferencesFragment"/>

    <Preference
        app:key="terminal_tasker"
        app:title="@string/terminal_tasker_preferences_title"
        app:summary="@string/terminal_tasker_preferences_summary"
        app:isPreferenceVisible="false"
        app:fragment="com.flomobility.anx.app.fragments.settings.TerminalTaskerPreferencesFragment"/>

    <Preference
        app:key="terminal_widget"
        app:title="@string/terminal_widget_preferences_title"
        app:summary="@string/terminal_widget_preferences_summary"
        app:isPreferenceVisible="false"
        app:fragment="com.flomobility.anx.app.fragments.settings.TerminalWidgetPreferencesFragment"/>

    <Preference
        app:key="about"
        app:title="@string/about_preference_title"
        app:persistent="false"/>
    <!-- app:layout="@layout/preference_markdown_text" -->

    <Preference
        app:key="donate"
        app:title="@string/donate_preference_title"
        app:persistent="false"
        app:isPreferenceVisible="false"/>

</PreferenceScreen>
