<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:title="@string/terminal_debugging_preferences_title"
        app:summary="@string/terminal_debugging_preferences_summary"
        app:fragment="com.flomobility.anx.app.fragments.settings.termux.DebuggingPreferencesFragment"/>

    <Preference
        app:title="@string/terminal_io_preferences_title"
        app:summary="@string/terminal_io_preferences_summary"
        app:fragment="com.flomobility.anx.app.fragments.settings.termux.TerminalIOPreferencesFragment"/>

    <Preference
        app:title="@string/terminal_view_preferences_title"
        app:summary="@string/terminal_view_preferences_summary"
        app:fragment="com.flomobility.anx.app.fragments.settings.termux.TerminalViewPreferencesFragment"/>

</PreferenceScreen>
