<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".hermes.ui.settings.SettingsActivity">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_arrow_left" />

    <ImageView
        android:layout_width="82dp"
        android:layout_height="32dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/backBtn"
        android:src="@drawable/flo_logo_2" />

    <TextView
        android:id="@+id/aboutTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/backBtn"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/metropolis_thin_webfont"
        android:text="About"
        android:textColor="#FEFEFE"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/termsTxt"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/aboutTxt"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/metropolis_regular_webfont"
        android:text="@string/terms_and_conditions"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/privacyTxt"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/termsTxt"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/metropolis_regular_webfont"
        android:text="@string/privacy_policy"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/docsTxt"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/privacyTxt"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/metropolis_regular_webfont"
        android:text="@string/docs"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/licenceTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/docsTxt"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/metropolis_regular_webfont"
        android:text="@string/licence_validity"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/validityTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/docsTxt"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/licenceTxt"
        android:fontFamily="@font/metropolis_regular_webfont"
        android:text="0 Days Left"
        android:textColor="@color/validityColor"
        android:textSize="16sp" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/licenceTxt"
        android:layout_marginTop="30dp"
        android:background="#9F9F9F" />

    <TextView
        android:id="@+id/actionsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/metropolis_thin_webfont"
        android:text="@string/actions"
        android:textColor="#FEFEFE"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/onBootTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/actionsTxt"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/metropolis_regular_webfont"
        android:text="@string/start_on_boot"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/onBootSwitch"
        android:theme="@style/Flo.ToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/actionsTxt"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="20dp" />

    <TextView
        android:id="@+id/logoutTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/onBootTxt"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/metropolis_regular_webfont"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/logoutBtn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_below="@id/onBootTxt"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_exit" />

    <TextView
        android:id="@+id/tv_flo_mobility_pvt_ltd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_flo_version"
        android:fontFamily="@font/metropolis_thin_webfont"
        android:text="Flo Mobility Pvt Ltd."
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textColor="@color/white"
        android:layout_marginBottom="8dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/tv_flo_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/metropolis_thin_webfont"
        android:text="v1.0.0"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:textColor="@color/white" />

</RelativeLayout>
